On mobile change personal skills in 3 columns and make text fit Fixes #50

--- a/alexrogna/app/assets/stylesheets/personal_skills.scss
+++ b/alexrogna/app/assets/stylesheets/personal_skills.scss
@@ -125,3 +125,13 @@
         }
     }
 }
+@media screen and (max-width: 800px) {
+    .s-personal_skills  {
+        font-size: 2.8vw;
+        .personal_skills{
+            .item{
+                padding: 0 0.1rem;
+            }
+        }
+    }
+}
